static/css/style.css
/*--------------------------------------------------------------------------------General styles----*/

body {
    min-height: 100vh;
    max-width: 100%;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    background-color: #F8F5F4;
}

.page-content {
    margin-top: 70px;
    min-height: 100vh;
    max-width: 100%;
    overflow-x: hidden
}

a:link {
    color: #F8F5F4;
}

a:visited {
    color: #F8F5F4;
}

a :hover {
    color:  #52A535;
}

a:active {
    color: #52A535;
}

/*--------------------------------------------------------------------------------Navbar styles----*/

.navbar-toggler-icon,
.nav-link {
    color: #F8F5F4;
}

.navalert-container {
    position: fixed;
    display: inline-flex;
    width: 100%;
    height: 60px;
    top: 0;
    left: 0;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
    background-color: #202020;
}

.navbar {
    margin: 0;
    border: 0;
    width: 100%;
}

.navbar .navbar-toggler {
    border: 0;
}

/*---------------------------------------------------------------------------------------------Home Page----*/

/*--------------------------------------------------------------------------------Post card styles----*/

.title {
    text-align: center;
    color: #F8F5F4;
}

.description {
    margin-top: 5px;
}

p {
    color: #F8F5F4;
}

.card-body {
    background-color: #202020;
}

/*--------------------------------------------------------------------------------Post detail styles----*/

.detail-text {
    color: #202020;
    text-align: center;
}

.detail-img {
    height: auto;
    margin-bottom: 15px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

/*--------------------------------------------------------------------------------Login Page----*/

.helptext a {
    color: #202020;
}

label {
    color: #202020;
}

/*--------------------------------------------------------------------------------Footer styles----*/

footer {
    margin-top: auto;
    background-color: #202020;
    color: #F8F5F4;
    min-height: 100px;
    margin: 0;
    bottom: 0;
    left: 0;
    min-width: 100%;
    max-width: 100%;
}

.social-links {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.social-links li a i {
    width: 28px;
    height: 28px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 1.5rem;
    line-height: 7px;
    text-align: center;
    color: #F8F5F4;
    background-color: #202020;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background: #757575;
    color:  #52A535;
}

#footer-details {
    padding-top: 20px;
}

#follow_minecraft {
    text-align: center;
    font-size: 20px;
}

